# solace-agent-mesh

./: .dockerignore  .env-template  .gitignore  .versionrc.json  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt  run_plm_assistant.py  run_tests.py  test_plm_writing_assistant_cli.py  test_with_cli.py
.github/: CODEOWNERS  release.yaml
.github/helper_scripts/: build_frontend.py
.github/workflows/: ci.yaml  gh_pages.yaml  release.yaml  release.yml
cli/: config.py  main.py  utils.py
cli/commands/: build.py  config.py  run.py  visualizer.py
cli/commands/add/: __init__.py  add.py  agent.py  copy_from_plugin.py  gateway.py
cli/commands/chat/: __init__.py  chat.py
cli/commands/init/: __init__.py  ai_provider_step.py  broker_step.py  builtin_agent_step.py  check_if_already_done.py  create_config_file_step.py  create_other_project_files_step.py  file_service_step.py  init.py  project_structure_step.py  rest_api_step.py  web_ui_step.py
cli/commands/plugin/: __init__.py  add.py  build.py  create.py  plugin.py  remove.py
config_portal/backend/: common.py  server.py
config_portal/frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
config_portal/frontend/app/: tailwind.css
config_portal/frontend/app/common/: providerModels.ts
config_portal/frontend/app/components/: InitializationFlow.tsx  StepIndicator.tsx
config_portal/frontend/app/routes/: _index.tsx
configs/: agent_global.yaml  agent_image_processing.yaml  agent_slack.yaml  agent_web_request.yaml  conversation_to_file.yaml  error_catcher.yaml  monitor_stim_and_errors_to_slack.yaml  monitor_user_feedback.yaml  orchestrator.yaml  service_embedding.yaml  service_llm.yaml  visualize_websocket.yaml
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: index.md
docs/docs/documentation/: enterprise.md
docs/docs/documentation/concepts/: _category_.json  agents.md  cli.md  gateways.md  monitors.md  orchestrator.md  services.md
docs/docs/documentation/deployment/: _category_.json  debugging.md  deploy.md  observability.md
docs/docs/documentation/tutorials/: _category_.json  (+4 more)
product_manager_plugin/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
product_manager_plugin/configs/agents/: plm_slide_deck_builder.yaml  plm_writing_assistant.yaml
product_manager_plugin/interfaces/: __INTERFACES_WILL_BE_HERE__
product_manager_plugin/src/agents/plm_slide_deck_builder/: plm_slide_deck_builder_agent_component.py
product_manager_plugin/src/agents/plm_slide_deck_builder/actions/: plm_slide_deck_builder.py
product_manager_plugin/src/agents/plm_writing_assistant/: plm_writing_assistant_agent_component.py
product_manager_plugin/src/agents/plm_writing_assistant/actions/: plm_writing_assistant.py
src/agents/: base_agent_component.py
src/agents/global/: global_agent_component.py
src/agents/image_processing/: image_processing_agent_component.py
src/agents/slack/: __init__.py  slack_agent_component.py
src/agents/web_request/: web_request_agent_component.py
src/common/: action.py  action_list.py  action_response.py  constants.py  mysql_database.py  postgres_database.py  prompt_templates.py  prompt_templates_unused_delete.py  stimulus_utils.py  time.py  utils.py
src/gateway/components/: gateway_base.py  gateway_input.py  gateway_output.py
src/gateway/identity/: bamboohr_identity.py  identity_base.py  identity_provider.py  no_identity.py  passthru_identity.py
src/monitors/: base_monitor_component.py
src/monitors/feedback/: user_feedback_monitor.py
src/monitors/stim_and_errors/: stim_and_error_monitor.py
src/orchestrator/: action_manager.py  orchestrator_main.py  orchestrator_prompt.py
src/orchestrator/components/: orchestrator_action_manager_timeout_component.py  orchestrator_action_response_component.py  orchestrator_register_component.py  orchestrator_stimulus_processor_component.py  orchestrator_streaming_output_component.py
src/services/bamboo_hr_service/: __init__.py  bamboo_hr.py
src/services/common/: __init__.py  auto_expiry.py  singleton.py
src/services/file_service/: __init__.py  file_service.py  file_service_constants.py  file_transformations.py  file_utils.py
src/services/history_service/: __init__.py  history_service.py
src/services/middleware_service/: middleware_service.py
src/solace_agent_mesh/: __init__.py
src/tools/components/: conversation_formatter.py  file_resolver_component.py
src/tools/config/: runtime_config.py
templates/: action.py  agent.py  agent.yaml  gateway-config-template.yaml  gateway-default-config.yaml  gateway-flows.yaml  gateway-header.yaml  gateway_base.py  gateway_input.py  gateway_output.py  plugin-gateway-default-config.yaml  plugin-pyproject.toml  rest-api-default-config.yaml  rest-api-flows.yaml  slack-default-config.yaml  slack-flows.yaml  solace-agent-mesh-default.yaml  solace-agent-mesh-plugin-default.yaml  web-default-config.yaml  web-flows.yaml
tests/: __init__.py  mocks.py  test.py  test_action_manager.py  test_embedding_service.py  test_env_file_update.py  test_history_service.py  test_orchestrator_streaming_output.py  test_parser.py
tests/services/file_service/: test_file_service.py
tests/services/history_service/: test_history_service.py
tools/: aider-rules.md  anthropic_example_prompt.md  md_to_html_converter.py
web-visualizer/: .gitignore  README.md  index.html  package-lock.json  package.json
web-visualizer/src/: ActionRequestComponent.jsx  ActionResponseComponent.jsx  App.css  App.jsx  Capabilities.jsx  CapabilitiesPage.jsx  ConfigDialog.jsx  ConnectionSelector.jsx  IndexedDBManager.js  LlmServiceRequestComponent.jsx  LlmServiceResponseComponent.jsx  MessageFlow.jsx  NavBar.jsx  OrchestratorReinvokeComponent.jsx  ResponseComponent.jsx  StimuliPage.jsx  StimulusComponent.jsx  StimulusDetails.jsx  StimulusList.jsx  index.css  main.jsx  messageProcessor.js  solaceManager.js  useAgentRegistrations.jsx  useSolaceConnection.js  useStimuli.js
(+83 files in other folders)
