[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solace-agent-mesh"
dynamic = ["version"]
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
  { name="Greg Meldrum", email="greg.meldrum@solace.com" },
  { name="Cyrus Mobini", email="cyrus.mobini@solace.com" },
]
description = "Solace Agent Mesh is an EDA AI-first platform powered by Solace"
readme = "README.md"
requires-python = ">=3.10.16"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4~=4.12.3",
    "boto3~=1.34.122",
    "build~=1.2.2.post1",
    "click~=8.1.7",
    "duckduckgo_search~=6.3.7",
    "html2text~=2024.2.26",
    "jq~=1.8.0",
    'kaleido~=0.1.0.post1; sys_platform == "win32"',
    'kaleido~=0.2.1; sys_platform != "win32"',
    "ruamel.yaml~=0.18.6",
    "markitdown~=0.0.1a3",
    "plotly~=5.24.1",
    "python_dateutil==2.9.0.post0",
    "pytest~=8.3.1",
    "pytest-cov~=5.0.0",
    "pyperclip~=1.9.0",
    "solace-ai-connector~=1.0.3",
    "solace-ai-connector[websocket]~=1.0.3",
    "solace-ai-connector[llm]~=1.0.3",
    "solace-ai-connector-web~=0.2.2",
    "solace-ai-connector-rest~=0.0.3",
    "solace-ai-connector-slack~=0.0.2",
  ]

[project.urls]
homepage = "https://github.com/SolaceLabs/solace-agent-mesh"
repository = "https://github.com/SolaceLabs/solace-agent-mesh"
documentation = "https://github.com/SolaceLabs/solace-agent-mesh/blob/main/docs/docs/index.md"

[tool.hatch.build.targets.wheel.force-include]
"src" = "solace_agent_mesh/"
"configs" = "solace_agent_mesh/configs"
"templates" = "solace_agent_mesh/templates"
"cli" = "solace_agent_mesh/cli"
"web-visualizer/dist" = "solace_agent_mesh/assets/web-visualizer"
"config_portal/frontend/static" = "solace_agent_mesh/config_portal/frontend/static"
"config_portal/backend" = "solace_agent_mesh/config_portal/backend"
"config_portal/__init__.py" = "solace_agent_mesh/config_portal/__init__.py"


[tool.hatch.build.targets.sdist.force-include]
"web-visualizer/dist" = "/assets/web-visualizer"
"config_portal/frontend/static" = "/assets/config_portal"




[project.scripts]
solace-agent-mesh = "solace_agent_mesh.cli.main:main"
sam = "solace_agent_mesh.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["solace_agent_mesh"]

[tool.hatch.build.targets.sdist.hooks.custom]
path = ".github/helper_scripts/build_frontend.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = ".github/helper_scripts/build_frontend.py"

[tool.hatch.version]
path = "cli/__init__.py"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F"]
lint.ignore = ["F401", "E731"]

[tool.hatch.envs.hatch-test]
installer = "pip"


[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.13"]
